# cbp-book-extraction

./: CMakeLists.txt  README.md  compile.sh  setup.py
notebook/: CoinbasePro Public Client Tutorial.ipynb
senseis/extraction/: candle_extractor.py
src/app/: CMakeLists.txt  book_extractor.cpp  sim_extractor.cpp  sim_extractor2.cpp
