add_executable(book_extractor book_extractor.cpp)
set_property(TARGET book_extractor PROPERTY CXX_STANDARD 17)
target_link_libraries(book_extractor ${CURL_LIBRARIES})
target_link_libraries(book_extractor Threads::Threads)
target_link_libraries(book_extractor Boost::program_options Boost::log Boost::system Boost::log_setup)

add_executable(sim_extractor sim_extractor.cpp)
set_property(TARGET sim_extractor PROPERTY CXX_STANDARD 17)
target_link_libraries(sim_extractor ${CURL_LIBRARIES})
target_link_libraries(sim_extractor Threads::Threads)
target_link_libraries(sim_extractor Boost::program_options Boost::log Boost::system Boost::log_setup)

add_executable(sim_extractor2 sim_extractor2.cpp)
set_property(TARGET sim_extractor2 PROPERTY CXX_STANDARD 17)
target_link_libraries(sim_extractor2 ${CURL_LIBRARIES})
target_link_libraries(sim_extractor2 Threads::Threads)
target_link_libraries(sim_extractor2 Boost::program_options Boost::log Boost::system Boost::log_setup)
